# CodexInfo

./: .gitignore  README.en.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: release-windows.yml
scripts/: bump-version.mjs  copy-release.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/renderer/: App.tsx  desktopApi.ts  main.tsx  styles.css
src/shared/: types.ts
